--- a/package.json
+++ b/package.json
@@ -4,256 +4,261 @@
   "description": "Generate various phone screen views for AD's",
   "main": "next.config.js",
   "dependencies": {
-    "acorn-walk": "^7.2.0",
     "acorn": "^8.7.1",
     "acorn-jsx": "^5.3.2",
-    "ansi-regex": "^5.0.1",
-    "ajv": "^6.12.6",
     "acorn-node": "^1.8.2",
-    "anymatch": "^3.1.2",
+    "acorn-walk": "^7.2.0",
+    "ajv": "^6.12.6",
+    "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
-    "aria-query": "^4.2.2",
-    "argparse": "^2.0.1",
-    "array.prototype.flat": "^1.3.0",
+    "anymatch": "^3.1.2",
     "arg": "^5.0.2",
-    "array-union": "^2.1.0",
-    "asynckit": "^0.4.0",
+    "argparse": "^2.0.1",
+    "aria-query": "^4.2.2",
     "array-includes": "^3.1.5",
-    "autoprefixer": "^10.4.12",
-    "axios": "^1.1.3",
-    "ast-types-flow": "^0.0.7",
+    "array-union": "^2.1.0",
+    "array.prototype.flat": "^1.3.0",
     "array.prototype.flatmap": "^1.3.0",
+    "ast-types-flow": "^0.0.7",
+    "asynckit": "^0.4.0",
+    "autoprefixer": "^10.4.12",
     "axe-core": "^4.4.2",
-    "babel-plugin-macros": "^2.8.0",
+    "axios": "^1.1.3",
     "axobject-query": "^2.2.0",
+    "babel-plugin-macros": "^2.8.0",
     "babel-plugin-polyfill-corejs2": "^0.3.3",
-    "base64-js": "^1.5.1",
     "babel-plugin-polyfill-corejs3": "^0.6.0",
+    "babel-plugin-polyfill-regenerator": "^0.4.1",
     "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
     "binary-extensions": "^2.2.0",
     "bl": "^4.1.0",
-    "babel-plugin-polyfill-regenerator": "^0.4.1",
     "boolbase": "^1.0.0",
-    "buffer": "^5.7.1",
-    "browserslist": "^4.21.4",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
+    "browserslist": "^4.21.4",
+    "buffer": "^5.7.1",
     "call-bind": "^1.0.2",
     "callsites": "^3.1.0",
     "camelcase": "^6.3.0",
     "camelcase-css": "^2.0.1",
     "caniuse-lite": "^1.0.30001422",
     "chalk": "^4.1.2",
-    "chownr": "^1.1.4",
     "chokidar": "^3.5.3",
+    "chownr": "^1.1.4",
+    "cliui": "^7.0.4",
+    "clsx": "^1.2.1",
     "color": "^4.2.3",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
-    "combined-stream": "^1.0.8",
     "color-string": "^1.9.1",
-    "cliui": "^7.0.4",
+    "combined-stream": "^1.0.8",
     "commander": "^7.2.0",
-    "clsx": "^1.2.1",
     "concat-map": "^0.0.1",
-    "core-js-compat": "^3.26.1",
-    "core-util-is": "^1.0.3",
-    "core-js-pure": "^3.22.8",
     "convert-source-map": "^1.8.0",
+    "core-js-compat": "^3.26.1",
+    "core-js-pure": "^3.22.8",
+    "core-util-is": "^1.0.3",
     "cosmiconfig": "^6.0.0",
+    "cross-spawn": "^7.0.3",
     "css-select": "^4.3.0",
     "css-tree": "^1.1.3",
     "css-what": "^6.1.0",
     "cssesc": "^3.0.0",
     "csso": "^4.2.0",
-    "cross-spawn": "^7.0.3",
     "csstype": "^3.1.0",
+    "damerau-levenshtein": "^1.0.8",
     "debug": "^4.3.4",
     "decompress-response": "^6.0.0",
     "deep-extend": "^0.6.0",
-    "damerau-levenshtein": "^1.0.8",
     "deep-is": "^0.1.4",
-    "delayed-stream": "^1.0.0",
     "deepmerge": "^4.2.2",
     "define-properties": "^1.1.4",
     "defined": "^1.0.1",
-    "dir-glob": "^3.0.1",
+    "delayed-stream": "^1.0.0",
     "detect-libc": "^2.0.1",
-    "didyoumean": "^1.2.2",
     "detective": "^5.2.1",
+    "didyoumean": "^1.2.2",
+    "dir-glob": "^3.0.1",
     "dlv": "^1.1.3",
-    "dom-helpers": "^5.2.1",
     "doctrine": "^3.0.0",
-    "domutils": "^2.8.0",
+    "dom-helpers": "^5.2.1",
     "dom-serializer": "^1.4.1",
+    "dom-to-image": "^2.6.0",
+    "dom-to-image-dev": "^1.0.0",
     "domelementtype": "^2.3.0",
-    "end-of-stream": "^1.4.4",
     "domhandler": "^4.3.1",
+    "domutils": "^2.8.0",
     "electron-to-chromium": "^1.4.284",
-    "error-ex": "^1.3.2",
     "emoji-regex": "^9.2.2",
+    "end-of-stream": "^1.4.4",
     "entities": "^4.4.0",
+    "error-ex": "^1.3.2",
     "es-abstract": "^1.20.1",
     "es-shim-unscopables": "^1.0.0",
-    "escalade": "^3.1.1",
     "es-to-primitive": "^1.2.1",
+    "escalade": "^3.1.1",
     "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.17.0",
     "eslint-config-next": "^12.1.6",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-module-utils": "^2.7.3",
-    "eslint": "^8.17.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-scope": "^7.1.1",
     "eslint-utils": "^3.0.0",
-    "espree": "^9.3.2",
     "eslint-visitor-keys": "^3.3.0",
+    "espree": "^9.3.2",
     "esquery": "^1.4.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "esutils": "^2.0.3",
     "esrecurse": "^4.3.0",
     "estraverse": "^5.3.0",
+    "esutils": "^2.0.3",
     "expand-template": "^2.0.3",
     "fast-deep-equal": "^3.1.3",
-    "fastq": "^1.13.0",
+    "fast-glob": "^3.2.11",
+    "fast-json-stable-stringify": "^2.1.0",
     "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.13.0",
+    "faye-websocket": "^0.11.4",
     "file-entry-cache": "^6.0.1",
+    "file-saver": "^2.0.5",
     "fill-range": "^7.0.1",
     "find-root": "^1.1.0",
     "find-up": "^2.1.0",
-    "fast-glob": "^3.2.11",
-    "fast-json-stable-stringify": "^2.1.0",
-    "faye-websocket": "^0.11.4",
+    "firebase": "^9.13.0",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.5",
     "follow-redirects": "^1.15.2",
     "form-data": "^4.0.0",
     "fraction.js": "^4.2.0",
-    "flatted": "^3.2.5",
-    "flat-cache": "^3.0.4",
-    "firebase": "^9.13.0",
     "fs-constants": "^1.0.0",
-    "functional-red-black-tree": "^1.0.1",
-    "function.prototype.name": "^1.1.5",
     "fs.realpath": "^1.0.0",
-    "functions-have-names": "^1.2.3",
     "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.5",
+    "functional-red-black-tree": "^1.0.1",
+    "functions-have-names": "^1.2.3",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
     "get-intrinsic": "^1.1.1",
+    "get-symbol-description": "^1.0.0",
     "github-from-package": "^0.0.0",
     "glob": "^7.1.7",
     "glob-parent": "^6.0.2",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-symbol-description": "^1.0.0",
-    "has": "^1.0.3",
-    "globby": "^11.1.0",
     "globals": "^13.15.0",
+    "globby": "^11.1.0",
+    "has": "^1.0.3",
     "has-bigints": "^1.0.2",
-    "has-property-descriptors": "^1.0.0",
-    "hoist-non-react-statics": "^3.3.2",
     "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
     "has-symbols": "^1.0.3",
-    "ieee754": "^1.2.1",
-    "http-parser-js": "^0.5.8",
-    "immediate": "^3.0.6",
     "has-tostringtag": "^1.0.0",
+    "hoist-non-react-statics": "^3.3.2",
+    "html-to-image": "^1.11.3",
+    "html2canvas": "^1.4.1",
+    "http-parser-js": "^0.5.8",
     "idb": "^7.0.1",
+    "ieee754": "^1.2.1",
     "ignore": "^5.2.0",
-    "inflight": "^1.0.6",
-    "imurmurhash": "^0.1.4",
-    "ini": "^1.3.8",
-    "inherits": "^2.0.4",
+    "immediate": "^3.0.6",
     "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
     "internal-slot": "^1.0.3",
     "is-arrayish": "^0.2.1",
+    "is-bigint": "^1.0.4",
     "is-binary-path": "^2.1.0",
     "is-boolean-object": "^1.1.2",
-    "is-bigint": "^1.0.4",
-    "is-core-module": "^2.9.0",
     "is-callable": "^1.2.4",
+    "is-core-module": "^2.9.0",
     "is-date-object": "^1.0.5",
     "is-extglob": "^2.1.1",
-    "is-negative-zero": "^2.0.2",
     "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.3",
+    "is-negative-zero": "^2.0.2",
     "is-number": "^7.0.0",
-    "is-shared-array-buffer": "^1.0.2",
     "is-number-object": "^1.0.7",
     "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
     "is-string": "^1.0.7",
     "is-symbol": "^1.0.4",
     "is-weakref": "^1.0.2",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
     "js-tokens": "^4.0.0",
     "js-yaml": "^4.1.0",
-    "isexe": "^2.0.0",
-    "isarray": "^1.0.0",
-    "json-parse-even-better-errors": "^2.3.1",
     "jsesc": "^2.5.2",
+    "json-parse-even-better-errors": "^2.3.1",
     "json-schema-traverse": "^0.4.1",
     "json-stable-stringify-without-jsonify": "^1.0.1",
     "json5": "^1.0.1",
-    "language-subtag-registry": "^0.3.21",
     "jsx-ast-utils": "^3.3.0",
+    "jszip": "^3.10.1",
+    "language-subtag-registry": "^0.3.21",
     "language-tags": "^1.0.5",
     "levn": "^0.4.1",
-    "jszip": "^3.10.1",
-    "lilconfig": "^2.0.6",
-    "locate-path": "^2.0.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.camelcase": "^4.3.0",
-    "lines-and-columns": "^1.2.4",
     "lie": "^3.3.0",
-    "loose-envify": "^1.4.0",
-    "long": "^4.0.0",
-    "memoize-one": "^6.0.0",
+    "lilconfig": "^2.0.6",
+    "lines-and-columns": "^1.2.4",
+    "locate-path": "^2.0.0",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.merge": "^4.6.2",
+    "long": "^4.0.0",
+    "loose-envify": "^1.4.0",
     "lru-cache": "^6.0.0",
-    "mime-db": "^1.52.0",
-    "mime-types": "^2.1.35",
+    "mdn-data": "^2.0.14",
+    "memoize-one": "^6.0.0",
     "merge2": "^1.4.1",
     "micromatch": "^4.0.5",
-    "mdn-data": "^2.0.14",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-response": "^3.1.0",
     "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
     "mkdirp-classic": "^0.5.3",
     "ms": "^2.1.2",
-    "mimic-response": "^3.1.0",
-    "napi-build-utils": "^1.0.2",
-    "next": "^12.1.6",
-    "minimist": "^1.2.6",
-    "natural-compare": "^1.4.0",
     "nanoid": "^3.3.4",
-    "node-releases": "^2.0.6",
-    "node-fetch": "^2.6.7",
+    "napi-build-utils": "^1.0.2",
+    "natural-compare": "^1.4.0",
+    "next": "^12.1.6",
+    "node-abi": "^3.22.0",
     "node-addon-api": "^5.0.0",
+    "node-fetch": "^2.6.7",
+    "node-releases": "^2.0.6",
     "normalize-path": "^3.0.0",
     "normalize-range": "^0.1.2",
-    "node-abi": "^3.22.0",
     "nth-check": "^2.1.1",
     "object-assign": "^4.1.1",
-    "object-keys": "^1.1.1",
+    "object-hash": "^3.0.0",
     "object-inspect": "^1.12.2",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.2",
+    "object.entries": "^1.1.5",
     "object.fromentries": "^2.0.5",
     "object.hasown": "^1.1.1",
-    "object-hash": "^3.0.0",
-    "object.assign": "^4.1.2",
+    "object.values": "^1.1.5",
+    "once": "^1.4.0",
     "optionator": "^0.9.1",
     "p-limit": "^1.3.0",
-    "object.entries": "^1.1.5",
     "p-locate": "^2.0.0",
-    "once": "^1.4.0",
-    "object.values": "^1.1.5",
-    "pako": "^1.0.11",
     "p-try": "^1.0.0",
+    "pako": "^1.0.11",
     "parent-module": "^1.0.1",
-    "path-exists": "^3.0.0",
     "parse-json": "^5.2.0",
-    "path-parse": "^1.0.7",
+    "path-exists": "^3.0.0",
     "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
     "pify": "^2.3.0",
     "postcss": "^8.4.18",
-    "path-key": "^3.1.1",
-    "path-type": "^4.0.0",
-    "picocolors": "^1.0.0",
     "postcss-import": "^14.1.0",
     "postcss-js": "^4.0.0",
     "postcss-load-config": "^3.1.4",
@@ -261,114 +266,113 @@
     "postcss-selector-parser": "^6.0.10",
     "postcss-value-parser": "^4.2.0",
     "prebuild-install": "^7.1.1",
-    "process-nextick-args": "^2.0.1",
-    "proxy-from-env": "^1.1.0",
     "prelude-ls": "^1.2.1",
+    "process-nextick-args": "^2.0.1",
     "prop-types": "^15.8.1",
+    "protobufjs": "^6.11.3",
+    "proxy-from-env": "^1.1.0",
     "pump": "^3.0.0",
     "punycode": "^2.1.1",
     "queue-microtask": "^1.2.3",
+    "quick-lru": "^5.1.1",
+    "rc": "^1.2.8",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-is": "^16.13.1",
     "react-select": "^5.7.0",
     "react-sparklines": "^1.7.0",
-    "protobufjs": "^6.11.3",
-    "quick-lru": "^5.1.1",
-    "rc": "^1.2.8",
     "react-transition-group": "^4.4.2",
     "read-cache": "^1.0.0",
+    "readable-stream": "^3.6.0",
     "readdirp": "^3.6.0",
+    "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.1.0",
     "regenerator-runtime": "^0.13.9",
-    "readable-stream": "^3.6.0",
-    "regexpp": "^3.2.0",
-    "regenerate": "^1.4.2",
     "regenerator-transform": "^0.15.1",
+    "regexp.prototype.flags": "^1.4.3",
+    "regexpp": "^3.2.0",
     "regexpu-core": "^5.2.2",
     "regjsgen": "^0.7.1",
-    "resolve": "^1.22.1",
-    "require-directory": "^2.1.1",
-    "resolve-from": "^4.0.0",
-    "regexp.prototype.flags": "^1.4.3",
-    "run-parallel": "^1.2.0",
     "regjsparser": "^0.9.1",
-    "scheduler": "^0.22.0",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.22.1",
+    "resolve-from": "^4.0.0",
     "reusify": "^1.0.4",
     "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "safe-buffer": "^5.1.2",
+    "scheduler": "^0.22.0",
+    "selenium-webdriver": "^4.5.0",
     "semver": "^7.3.7",
     "setimmediate": "^1.0.5",
     "sharp": "^0.30.7",
-    "safe-buffer": "^5.1.2",
-    "selenium-webdriver": "^4.5.0",
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
-    "simple-swizzle": "^0.2.2",
     "side-channel": "^1.0.4",
+    "simple-concat": "^1.0.1",
+    "simple-get": "^4.0.1",
+    "simple-swizzle": "^0.2.2",
     "slash": "^3.0.0",
     "source-map": "^0.5.7",
+    "source-map-js": "^1.0.2",
     "stable": "^0.1.8",
+    "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
     "string.prototype.matchall": "^4.0.7",
-    "simple-concat": "^1.0.1",
-    "string.prototype.trimstart": "^1.0.5",
-    "simple-get": "^4.0.1",
-    "string_decoder": "^1.3.0",
-    "strip-bom": "^3.0.0",
-    "source-map-js": "^1.0.2",
     "string.prototype.trimend": "^1.0.5",
+    "string.prototype.trimstart": "^1.0.5",
+    "strip-ansi": "^6.0.1",
+    "strip-bom": "^3.0.0",
     "strip-json-comments": "^3.1.1",
-    "stylis": "^4.1.3",
     "styled-jsx": "^5.0.2",
+    "stylis": "^4.1.3",
+    "supports-color": "^7.2.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "svg-parser": "^2.0.4",
-    "strip-ansi": "^6.0.1",
-    "supports-color": "^7.2.0",
     "svgo": "^2.8.0",
-    "tar-fs": "^2.1.1",
     "tailwindcss": "^3.1.8",
+    "tar-fs": "^2.1.1",
     "tar-stream": "^2.2.0",
     "text-table": "^0.2.0",
-    "to-regex-range": "^5.0.1",
-    "tr46": "^0.0.3",
     "tmp": "^0.2.1",
     "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "tr46": "^0.0.3",
+    "tsconfig-paths": "^3.14.1",
+    "tslib": "^1.14.1",
+    "tsutils": "^3.21.0",
     "tunnel-agent": "^0.6.0",
     "type-check": "^0.4.0",
-    "tslib": "^1.14.1",
     "type-fest": "^0.20.2",
-    "tsconfig-paths": "^3.14.1",
-    "tsutils": "^3.21.0",
+    "typescript": "^4.7.3",
+    "unbox-primitive": "^1.0.2",
     "unicode-canonical-property-names-ecmascript": "^2.0.0",
     "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.1.0",
     "unicode-property-aliases-ecmascript": "^2.1.0",
     "update-browserslist-db": "^1.0.10",
-    "typescript": "^4.7.3",
-    "use-isomorphic-layout-effect": "^1.1.2",
-    "unbox-primitive": "^1.0.2",
     "uri-js": "^4.4.1",
-    "unicode-match-property-value-ecmascript": "^2.1.0",
+    "use-isomorphic-layout-effect": "^1.1.2",
+    "util-deprecate": "^1.0.2",
+    "v8-compile-cache": "^2.3.0",
     "webidl-conversions": "^3.0.1",
     "websocket-driver": "^0.7.4",
+    "websocket-extensions": "^0.1.4",
     "whatwg-url": "^5.0.0",
-    "v8-compile-cache": "^2.3.0",
-    "util-deprecate": "^1.0.2",
     "which": "^2.0.2",
+    "which-boxed-primitive": "^1.0.2",
+    "word-wrap": "^1.2.3",
     "wrap-ansi": "^7.0.0",
     "wrappy": "^1.0.2",
     "ws": "^8.11.0",
     "xtend": "^4.0.2",
     "y18n": "^5.0.8",
-    "websocket-extensions": "^0.1.4",
     "yallist": "^4.0.0",
-    "word-wrap": "^1.2.3",
-    "which-boxed-primitive": "^1.0.2",
-    "yargs": "^16.2.0",
     "yaml": "^1.10.2",
+    "yargs": "^16.2.0",
     "yargs-parser": "^20.2.9"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next dev",
